# bff-sdf-rigid-pro

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: asset_sources.md  codex_handoff.md  experiments.md  implementation_plan.md  paper_outline.md  paper_plan.md  theory.md  validation_report.md
results/benchmarks/: ablation.csv  accuracy.csv  asset_stats.csv  bff_vs_planar_ablation.csv  chart_quality.csv  mesh_resolution_study.csv  runtime.csv  sdf_resolution_study.csv  validation_report.md
results/sphere_plane/: config.json  contact_contour_uv.csv  contact_samples.ply  metrics.csv  report.md  timing.csv  timing.json
results/sphere_sphere/: config.json  contact_contour_uv.csv  contact_samples.ply  metrics.csv  report.md
scripts/: generate_paper_figures.py  run_all_tests.ps1  run_rigid_benchmarks.py
src/atlas/: BFFAdapter.cpp  BFFAdapter.h  ChartEvaluator.cpp  ChartEvaluator.h  ContactAtlas.cpp  ContactAtlas.h  Patch.h  PatchBuilder.cpp  PatchBuilder.h  UVAcceleration.cpp  UVAcceleration.h
src/contact/: ChartProjector.cpp  ChartProjector.h  ContactDetector.cpp  ContactDetector.h  ContactGapField.cpp  ContactGapField.h  ContactIntegrator.cpp  ContactIntegrator.h  ContactTypes.h  MarchingTriangles.cpp  MarchingTriangles.h
src/core/: AABB.h  GeometryTypes.h  Mesh.cpp  Mesh.h  MeshRepair.cpp  MeshRepair.h  RigidPose.h
src/experiments/: ProceduralMeshes.cpp  ProceduralMeshes.h  run_benchmarks.cpp  run_sphere_plane.cpp  run_sphere_sphere.cpp
src/io/: DebugExport.cpp  DebugExport.h  MeshIO.cpp  MeshIO.h
src/sdf/: AnalyticSDF.cpp  AnalyticSDF.h  GridSDF.cpp  GridSDF.h  ISDF.h  MeshSDF.cpp  MeshSDF.h
tests/: procedural_test_meshes.h  test_bff_adapter.cpp  test_chart_evaluator.cpp  test_contact_area.cpp  test_gap_field.cpp  test_main.h  test_marching_triangles.cpp  test_mesh.cpp  test_mesh_repair.cpp  test_pose.cpp  test_projection.cpp  test_sdf.cpp
